--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ body {
 @media screen and (min-width: 480px){
 h1{
     text-align: center;
-    margin: 0 0 5px 0;
+    margin: 0;
   }
 h2{
-    font-size: 50px;
+    font-size: 25px;
     color: #07573c;
     margin: 10px 0 0 0;
   }
@@ -34,6 +34,7 @@ h2{
 */
 .memo_main_box{
   display: flex;
+  margin: 0 100px 0 100px;
 }
 
 /*
@@ -240,11 +241,53 @@ progress {
 }
 }
 
+#fullOverlay{
+  position: absolute;
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background: rgb(1, 73, 37);
+  z-index: 2147483647;
+}
+#fullOverlay .text{
+  position: absolute;
+  left: 50%; top: 50%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  color: rgba(250, 250, 250, 1);
+  font-size: 24px;
+  text-align: center;
+}
+#fullOverlay .text img{
+  cursor: pointer;
+}
+
+
 
 /* スマホ用（ウィンドウ幅が0〜479pxの場合に適用するCSS）*/
 @media screen and ( max-width:479px )
 {
-
+  #fullOverlay{
+    position: absolute;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background: rgb(1, 73, 37);
+    z-index: 2147483647;
+  }
+  #fullOverlay .text{
+    position: absolute;
+    left: 50%; top: 50%;
+    width: 100%;
+    transform: translate(-50%, -50%);
+    color: rgba(250, 250, 250, 1);
+    font-size: 18px;
+    text-align: center;
+  }
+  #fullOverlay .text img{
+    cursor: pointer;
+  }
+  #mainImage{
+  display:none;
+}
 .memo_main_box{
   margin: 0 5px 0 5px;
 }
